# skills-man

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
design/: skill-source-provider.md
src/: cli.rs  errors.rs  main.rs  models.rs  utils.rs
src/cli/: github.rs  install.rs  list.rs  mod.rs  prompt.rs  sync.rs  uninstall.rs  update.rs
src/providers/: github.rs  mod.rs
