[package]
name = "skills-man"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
flate2 = "1.1.5"
tar = "0.4.44"
walkdir = "2.5.0"
thiserror = "2.0.17"
regex = "1.12.2"
ureq = { version = "3.1.4", features = ["json", "socks-proxy"] }
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"


[[bin]]
name = "skill"
path = "src/main.rs"
